TURMERIC-323: Improved graphs look and feel. Small spacing fixes
git-svn-id: http://www.ebayopensource.org/svn/turmeric/soa-platform/trunk/monitoring@872 f631a2f7-0bfe-4ef6-91ca-5e61167123dd

--- a/mgmt-console/war/Console.css
+++ b/mgmt-console/war/Console.css
@@ -191,15 +191,15 @@ h1 {
 .summary-panel-item {
 	float: left;
 	margin: 5px;
-	border: 1px;
-	border-style: dashed;
+/* 	border: 1px; */
+/* 	border-style: dashed; */
 }
 
 
 
 .summary-panel-item .summary-scroll {
 	border: 1px solid  ;
-	min-height: 300px;
+	min-height: 150px;
 }
 
 
